# fastapi-tdd

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
project/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/migrations/models/: 0_20230803151535_init.py
project/tests/: conftest.py  test_ping.py  test_summaries.py
