[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = ""
authors = ["Fareeid <faridkim@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tdd"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"
tortoise-orm = "^0.19.3"
aerich = "^0.7.2"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
